sqlbrowser example: use idiomatic Qt [3/3]: use form-layout
The old code used a grid layout inside the QGroupBox, but the design
with labels in the first and edit-widgets in the second column lends
itself to a QFormLayout, which adapts the alignment of the widgets to
the platform style, so use that.

Amends 2690822428deec4f0c08f4d118d69a7c6036369e, which, however,
inherited all of the above from even older code.

Pick-to: 6.9 6.8
Change-Id: I528f0ce9d8cb7a997fbfabcdca887c059f571b38
Reviewed-by: Volker Hilsheimer <volker.hilsheimer@qt.io>

--- a/examples/sql/sqlbrowser/qsqlconnectiondialog.ui
+++ b/examples/sql/sqlbrowser/qsqlconnectiondialog.ui
@@ -27,13 +27,7 @@
      <property name="title" >
       <string>Connection settings</string>
      </property>
-     <layout class="QGridLayout" >
-      <property name="margin" >
-       <number>8</number>
-      </property>
-      <property name="spacing" >
-       <number>6</number>
-      </property>
+     <layout class="QFormLayout" name="formLayout">
       <item row="0" column="1" >
        <widget class="QComboBox" name="comboDriver" />
       </item>
